Corrige acriação de tela sobre tela e cria tela para editar produto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.MeuEstoque"
         tools:targetApi="31">
         <activity
+            android:name=".TelaEditar"
+            android:exported="false" />
+        <activity
             android:name=".TelaCriar"
             android:exported="false" />
         <activity
